--- a/src/encoded/static/scss/encoded/_layout.scss
+++ b/src/encoded/static/scss/encoded/_layout.scss
@@ -47,7 +47,7 @@ body {
 
 #layout {
 	height: auto !important;
-    margin: 0 auto -$footer-height;
+    // margin: 0 auto -$footer-height;
     min-height: 100%;
 	background-color: $appBackgroundColor;
 	// overflow-x: hidden;
