--- a/src/encoded/static/scss/encoded/_layout.scss
+++ b/src/encoded/static/scss/encoded/_layout.scss
@@ -245,7 +245,7 @@ body.is-full-screen {
 			//padding-bottom: 10px;
 			> .subtitle-prepend {
 				margin-right: 8px;
-				&.border-right {
+				&.border-end {
 					padding-right : 8px;
 					border-right: 1px solid #ddd;
 				}
