--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2509,7 +2509,7 @@ table.report-findings-table {
 				> label {
 					cursor: pointer;
 					> input {
-						// Override default mr-08
+						// Override default me-08
 						margin-right: 16px !important;
 					}
 				}
