--- a/src/encoded/static/scss/encoded/modules/_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_search.scss
@@ -126,7 +126,7 @@ $search-results-header-row-height: 52px; /* 46px is existing default for both re
       vertical-align: text-top;
     }
     .mono-text,
-    .text-monospace {
+    .font-monospace {
       letter-spacing: 0.5px;
     }
     img.in-search-table-title-image {
