rename .close to .btn-close for Bootstrap 5 migration

--- a/src/encoded/static/scss/encoded/_layout.scss
+++ b/src/encoded/static/scss/encoded/_layout.scss
@@ -93,7 +93,7 @@ body {
 
 	> .alerts {
 		margin-top: 20px;
-		.alert.no-close-button > button.close {
+		.alert.no-close-button > button.btn-close {
 			display: none;
 		}
 	}
