--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -281,7 +281,7 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
 			margin-top: 0;
 			margin-bottom: 0;
 
-			&.h4 + button.close {
+			&.h4 + button.btn-close {
 				/* Default size for Modal.Title is h4; increase close button icon size (experimental) */
 				font-size: 1.8em;
 			}
