--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -118,6 +118,11 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
     padding-right: 7px;
 }
 
+.btn.btn-info,
+.btn.btn-success {
+    color: #fff !important;
+}
+
 /* Light gray BG, more prominent button style than btn-default */
 .btn.btn-secondary {
     @include button-variant(#e4e4e4, #e0e0e0);
