--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -98,6 +98,9 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
 	&.btn-xs.fixed-height {
 		height: 24px;
 	}
+	&.btn-link {
+		text-decoration: none;
+	}
 }
 
 /** Extending Bootstrap button w/ rounded & ext-padding class **/
