--- a/src/encoded/static/scss/encoded/modules/_tooltip.scss
+++ b/src/encoded/static/scss/encoded/modules/_tooltip.scss
@@ -9,13 +9,13 @@ body .__react_component_tooltip {
 	z-index: 9999 !important;
 
     max-width: 630px;
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
         max-width : 400px;
     }
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         max-width : 500px;
     }
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(lg) {
         max-width : 600px;
     }
 
