--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -134,6 +134,15 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
     //}
 }
 
+.btn.btn-outline-success {
+    color: $success;
+    border-color: $success;
+    &:hover, &:active, &.active {
+        color: #fff;
+        background-color: $success;
+    }
+}
+
 
 /* Moving caret to always right position */
 .dropdown-toggle.btn {
