update FontAwesome font files to v6

--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -158,7 +158,7 @@ $print-body-min-width:              8.5in;
 /** FontAwesome Icon Stuff **/
 /****************************/
 
-$fa-font-path: "/static/font/fontawesome5.9" !default;
+$fa-font-path: "/static/font/fontawesome6" !default;
 $fa-font-size-base: $font-size-base;
 $fa-css-prefix: icon;
 
