--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -22,9 +22,11 @@ $modal-backdrop-opacity : 0.8;
 
 $facetlist-selected-term-color : #248bac;
 
-$badge-color-warning : #e29302;
-$badge-color-error : #bd0000;
-$badge-color-internal-action: #d0d0d0;
+$badge-padding-y: .25em;
+$badge-padding-x: .4em;
+$badge-font-size: 75%;
+$badge-border-radius: .25em;
+$badge-color: #fff;
 
 $font-family-sans-serif : "Source Sans Pro", "Work Sans", Helvetica, Arial, sans-serif;
 $font-family-serif : "Yrsa", "Times New Roman", Georgia, Times, serif;
