--- a/src/encoded/static/scss/encoded/modules/_tables.scss
+++ b/src/encoded/static/scss/encoded/modules/_tables.scss
@@ -21,6 +21,16 @@ table {
 					border-left: none !important;
 				}
 				*/
+
+				//In Bootstrap v5, text-left and text-right were replaced by text-start and text-end.
+				//Custom SCSS styles were added for text-left and text-right to maintain text alignment compatibility.
+				//These can be removed when no longer needed.
+				&.text-left {
+					text-align: left !important;
+				}
+				&.text-right {
+					text-align: right !important;
+				}
 			}
 		}
 
@@ -39,6 +49,13 @@ table {
 				text-align: center;
 				vertical-align: middle !important;
 				outline: none !important;
+
+				&.text-left {
+					text-align: left !important;
+				}
+				&.text-right {
+					text-align: right !important;
+				}
 			}
 		}
 
