update Sass variables

--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -103,6 +103,7 @@ $grid-gutter-width:                         20px;
 $link-color: #428bca;
 
 /** Setup some other variables for tables, etc. **/
+$table-color:                #212529;
 $expset-table-border-color : #eee;
 
 
@@ -145,6 +146,8 @@ $btn-line-height: 1.45rem;
 /* Cards */
 $card-spacer-y: 1.25rem;
 $card-spacer-x: 1.25rem;
+$card-cap-padding-y: .75rem;
+$card-cap-padding-x: 1.25rem;
 $card-cap-bg: #fff;
 $card-bg: #fff;
 $card-inner-border-radius: 3px;
