--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -218,6 +218,7 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
     // Overrides 0.75rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+	color: #495057;
 }
 
 
