--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -141,6 +141,14 @@
 			text-decoration: underline;
 		}
 	}
+
+  a.nav-link {
+    text-decoration: none;
+  
+    &:hover {
+      text-decoration: none !important;
+    }
+  }
 }
 
 .static-section-entry {
