--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -71,8 +71,10 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
  **************************************/
 
 .btn {
+	--bs-btn-active-bg: #1f4561;
+	--bs-btn-active-border-color: #1c3e58;
+
     font-weight: 400;
-	line-height: 1.5;
     /* @include box-shadow(0 1px 3px rgba(0,0,0,.1), inset 0 -2px 3px rgba(0,0,0,.12), inset 0 1px 0 rgba(255,255,255,.3)); */
     //@include box-shadow(0 1px 3px rgba(0,0,0,0.25),inset 0 -1px 4px rgba(0,0,0,0.2),inset 0 1px 4px rgba(255,255,255,0.3));
 
@@ -107,9 +109,10 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
 /** Extending Bootstrap button w/ rounded & ext-padding class **/
 /** btn-xs was removed in Bootstrap v4 so we recreate it here **/
 .btn.btn-xs {
-    @include button-size(1px, 5px, 0.825rem, 1.5);
+    @include button-size(1px, 5px, 0.825rem, 2px);
     font-weight: 400;
     padding-top: 2px;
+	line-height: 1.5;
     //> i.icon {
     //    // Unset btn style
     //    transform: none;
@@ -201,6 +204,7 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
 
 /* Override sizing of btn-sm button re: our font */
 .btn.btn-sm {
+	line-height: 1.5;
 	&:not(.align-items-center) {
 		> i.icon {
 			// Center icons better within .btn-sm re: our fontface/height/etc
