Update .btn-close styles

--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -66,6 +66,8 @@ $grid-breakpoints: (
 
 $body-color: #212529;
 
+$btn-close-bg: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><line x1="4" y1="4" x2="20" y2="20" stroke="black" stroke-width="5" /><line x1="20" y1="4" x2="4" y2="20" stroke="black" stroke-width="5" /></svg>');
+
 $border-radius:                             .25rem;
 $border-radius-base:                        3px;
 $border-radius-lg:                          4px;
