--- a/src/encoded/static/scss/encoded/modules/_navbar.scss
+++ b/src/encoded/static/scss/encoded/modules/_navbar.scss
@@ -536,6 +536,7 @@ div#top-nav.navbar-fixed-top {
             font-size: 1.5rem;
             border: none;
             color: $navbar-link-color;
+            box-shadow: none;
 
             &:hover, &:active, &:focus {
                 background-color: rgba(0,0,0,0.125);
