add link hover effect and make `access-keys-table` responsive

--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -362,3 +362,12 @@ a {
 		}
 	}
 }
+
+/**************************************
+ ************ Accordion ***********
+ **************************************/
+.accordion {
+	.card-header.btn {
+		border: 0 !important;
+	}
+}
