--- a/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
+++ b/src/encoded/static/scss/encoded/_bootstrap-theme-overrides.scss
@@ -102,6 +102,16 @@ $margin-util-sizes-mini: 1, 2, 3, 4, 5, 6, 7, 8; 		// * 1px
 	&.btn-link {
 		text-decoration: none;
 	}
+
+	&.disabled,
+    &:disabled {
+        cursor: default;
+        pointer-events: auto;
+
+        &:active {
+            pointer-events: none;
+        }
+    }
 }
 
 /** Extending Bootstrap button w/ rounded & ext-padding class **/
